--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  
 <body>
   <h1>Eunhae</h1>
-  <p>Welcome to my website!</p>
+  <p>Luxury Loungewear is High Fashion</p>
+ 
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
